@@ -1,6 +1,6 @@
 #	Exult 1.5.0svn text message file.	Written by ExultStudio.
 %%section version
-:6
+:7
 %%endsection
 %%section usecode_events
 :1128/1
