@@ -4,7 +4,7 @@
 #
 
 %%section version
-:6
+:7
 %%endsection
 
 %%section explosions
@@ -443,63 +443,64 @@
 #	Lots of monster/actor data which was hardcoded in the originals.
 #
 #	Format
-#		:shapenum/dont_eat/cold_immune/summons/teleports/turn_invis/quakewalk
+#		:shapenum/cold_immune/dont_eat/teleports/summons/turn_invis/armageddon_safe/quake_walk/goblin
 #
 #	The fields are flags which are true if nonzero, false otherwise.
 #	The default for actors not on the list is false.
-#	dont_eat: nonzero if actor does not need food, zero otherwise.
 #	cold_immune: nonzero if actor is immune to cold, zero otherwise.
-#	summons: nonzero if actor can summon allies, zero otherwise.
+#	dont_eat: nonzero if actor does not need food, zero otherwise.
 #	teleports: nonzero if actor can teleport, zero otherwise.
+#	summons: nonzero if actor can summon allies, zero otherwise.
 #	turn_invis: nonzero if actor can become invisible, zero otherwise.
-#	armageddon: nonzero if actor susrives armageddon, zero otherwise.
-#	quakewalk: nonzero if actor causes earthquake when walking, zero otherwise.
+#	armageddon_safe: nonzero if actor susrives armageddon, zero otherwise.
+#	quake_walk: nonzero if actor causes earthquake when walking, zero otherwise.
+#	goblin: nonzero if goblin, zero otherwise
 #
 #
 #		Mages
 #
-:154/0/0/1/1/1/0/0
-:445/0/0/1/1/1/0/0
-:446/0/0/1/1/1/0/0
+:154/0/0/1/1/1/0/0/0
+:445/0/0/1/1/1/0/0/0
+:446/0/0/1/1/1/0/0/0
 
 #		Ghosts
 #
-:299/0/0/0/1/1/0/0
-:317/0/0/0/1/1/0/0
+:299/0/0/0/1/1/0/0/0
+:317/0/0/0/1/1/0/0/0
 
 #		Liches
 #
-:354/0/0/1/1/1/0/0
-:519/0/0/1/1/1/0/0
+:354/0/0/1/1/1/0/0/0
+:519/0/0/1/1/1/0/0/0
 
 #		Dragon
 #
-:504/0/0/0/0/1/0/0
+:504/0/0/0/0/1/0/0/0
 
 #		Gazer
 #
-:511/0/0/0/0/1/0/0
+:511/0/0/0/0/1/0/0/0
 
 #		Kissme
 #
-:382/0/0/0/1/0/0/0
+:382/0/0/0/1/0/0/0/0
 
 #		Wisp
 #
-:534/0/0/0/1/0/0/0
+:534/0/0/0/1/0/0/0/0
 
 #		Batlin
 #
-:403/0/0/0/0/0/1/0
-:482/0/0/0/0/0/1/0
+:403/0/0/0/0/0/1/0/0
+:482/0/0/0/0/0/1/0/0
 
 #		Lord British
-:466/0/0/0/0/0/1/0
+:466/0/0/0/0/0/1/0/0
 
 #		Cyclops
 #
-:380/0/0/0/0/0/0/1
-:501/0/0/0/0/0/0/1
+:380/0/0/0/0/0/0/1/0
+:501/0/0/0/0/0/0/1/0
 %%endsection
 
 %%section warmth_data
