@@ -2998,7 +2998,8 @@ void ExultStudio::init_shape_notebook
 					"shinfo_actor_flag3",
 					"shinfo_actor_flag4",
 					"shinfo_actor_flag5",
-					"shinfo_actor_flag6" };
+					"shinfo_actor_flag6",
+					"shinfo_actor_flag7" };
 		set_bit_toggles(&flags[0], sizeof(flags)/sizeof(flags[0]), aflags);
 		}
 	Monster_info *minfo = info.get_monster_info();
@@ -3911,7 +3912,8 @@ void ExultStudio::save_shape_notebook
 					"shinfo_actor_flag3",
 					"shinfo_actor_flag4",
 					"shinfo_actor_flag5",
-					"shinfo_actor_flag6" };
+					"shinfo_actor_flag6",
+					"shinfo_actor_flag7" };
 		info.set_actor_flags(get_bit_toggles(&flags[0], 
 					sizeof(flags)/sizeof(flags[0])));
 		}
