@@ -45,8 +45,8 @@ void Set_item_name(int num, const char *name);
 /*
  *	Message #'s.  These are (offset-0x400) in text.flx and exultmsg.txt:
  */
-const int first_move_aside = 0x00;	// For guards when blocked.
-const int last_move_aside = 0x02;
+// Schedule barks.
+const int first_move_aside = 0x00, last_move_aside = 0x02;	// For guards when blocked.
 const int first_preach = 0x03, last_preach = 0x07;
 const int first_preach2 = 0x08, last_preach2 = 0x0b;
 const int first_amen = 0x0c, last_amen = 0x0f;
@@ -56,42 +56,55 @@ const int first_arrest = 0x17, last_arrest = 0x1a;
 const int first_waiter_ask = 0x1b, last_waiter_ask = 0x1f;
 const int first_more_food = 0x20, last_more_food = 0x24;
 const int first_munch = 0x25, last_munch = 0x28;
-const int first_ouch = 0x29;
-const int last_ouch = 0x2c;
-const int first_need_help = 0x30;
-const int last_need_help = 0x33;
-const int first_will_help = 0x34;
-const int last_will_help = 0x36;
-const int first_to_battle = 0x39;
-const int last_to_battle = 0x3b;
-const int first_call_guards_theft = 0x3c, last_call_guards_theft = 0x3e;
 const int first_farmer = 0x3f, last_farmer = 0x41;
 const int first_miner = 0x42, last_miner = 0x44;
 const int first_miner_gold = 0x45, last_miner_gold = 0x47;
-const int first_flee = 0x48;
-const int last_flee = 0x4e;
 const int first_farmer2 = 0x60, last_farmer2 = 0x62;
-const int first_lamp_on = 0x63;
-const int last_lamp_on = 0x66;
+const int first_lamp_on = 0x63, last_lamp_on = 0x66;
 const int lamp_off = 0x67;
-const int first_call_police = 0x69;
-const int last_call_police = 0x6d;
-const int first_call_guards = 0x6c;
-const int last_call_guards = 0x6d;
-const int first_theft = 0x6e;		// Warnings.
-const int last_theft = 0x70;
-const int first_close_shutters = 0x71;
-const int last_close_shutters = 0x73;
-const int first_open_shutters = 0x74;
-const int last_open_shutters = 0x76;
+const int first_close_shutters = 0x71, last_close_shutters = 0x73;
+const int first_open_shutters = 0x74, last_open_shutters = 0x76;
+// Combat-related barks.
+const int first_ouch = 0x29, last_ouch = 0x2c;
+const int first_need_help = 0x30, last_need_help = 0x33;
+const int first_will_help = 0x34, last_will_help = 0x36;
+const int first_to_battle = 0x39, last_to_battle = 0x3b;
+const int flee_screaming = 0x37;
+const int first_flee = 0x48, last_flee = 0x52;
+const int first_taunt = 0x53, last_taunt = 0x59;
+const int goblin_ouch = 0xcc;
+const int first_goblin_taunt = 0xcd, last_goblin_taunt = 0xce;
+	// Goblin barks 0xcf, 0xd0 and 0xd1 probably come here, but how???
+const int goblin_need_help = 0xd2;
+const int goblin_will_help = 0xd3;
+const int goblin_flee_screaming = 0xd4;
+const int first_goblin_flee = 0xd5, last_goblin_flee = 0xd9;
+const int goblin_to_battle = 0xda;
+// Thieving avatar warnings.
+const int first_theft = 0x6e, last_theft = 0x70;
+const int goblin_theft = 0xcb;
+// Invisible thieving avatar warnings.
+const int first_invis_theft = 0x85, last_invis_theft = 0x87;
+const int goblin_invis_theft = 0xc8;
+// Call guards.
+const int first_call_guards_theft = 0x3c, last_call_guards_theft = 0x3e;
+const int first_call_police = 0x69, last_call_police = 0x6d;
+const int first_call_guards = 0x6c, last_call_guards = 0x6d;
+const int first_goblin_call_police = 0xc6, last_goblin_call_police = 0xc7;
+const int first_goblin_call_guards = 0xc6, last_goblin_call_guards = 0xc7;
+const int goblin_call_guards_theft = 0xc9;
+// Awoke sleeper.
+const int heard_something = 0x95;
+const int first_awakened = 0x95, last_awakened = 0x9a;
+const int goblin_heard_something = 0xca;
+const int goblin_awakened = 0xca;
+// Magebane (SI only).
+const int first_magebane_struck = 0x9b, last_magebane_struck = 0x9d;
+// Hunger.
 const int first_hunger = 0x77, last_hunger = 0x79;		// A little hungry.
 const int first_needfood = 0x7a, last_needfood = 0x7c;	// Must have food.
 const int first_starving = 0x7d, last_starving = 0x7f;	// Starving.
-const int heard_something = 0x95;
-const int first_awakened = 0x95;
-const int last_awakened = 0x9a;
-const int first_magebane_struck = 0x9b;
-const int last_magebane_struck = 0x9d;
+// Cold.
 const int first_chilly = 0x9e, last_chilly = 0xa0;	// 0 - 9 temp
 const int first_cold = 0xa1, last_cold = 0xa3;	// 10 - 19 temp
 const int first_colder = 0xa4, last_colder = 0xa6;	// 20 - 29 temp
@@ -103,7 +116,6 @@ const int first_frostbite_3 = 0xb9, last_frostbite_3 = 0xbb;	// 50 - 59 temp
 const int first_frozen = 0xbc, last_frozen = 0xbd;	// 60+ temp
 const int first_warming_up_2 = 0xbe, last_warming_up_2 = 0xc1; // < 30 temp (warm area)
 const int first_warming_up = 0xc2, last_warming_up = 0xc5;	// 30+ temp (warm area)
-const int first_goblin_to_battle = 0xc9, last_goblin_to_battle = 0xd1;	// (SI only).
 
 //	Messages in exultmsg.txt ( - 0x400):
 const int first_chair_thief = 0x100, last_chair_thief = 0x104;
